--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header id="header" class="bg-gray-900/70 backdrop-blur-md shadow-lg sticky top-0 z-50 transition-all duration-300 border-b border-gray-700/50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <!-- Your Name/Logo -->
-            <a href="#" class="text-xl font-bold text-white hover:text-emerald-400 transition-colors">Valerie M.</a>
+            <a href="#" class="text-xl font-bold text-white hover:text-emerald-400 transition-colors">Matthew T. Valdez</a>
 
             <!-- Mobile Menu Button (Hamburger Icon) -->
             <div class="md:hidden">
@@ -128,7 +128,12 @@
                 <p class="text-gray-400 mb-12">Who is this person, and why should you care?</p>
                  <!-- About me content -->
                 <div class="bg-gray-900 p-8 rounded-xl shadow-lg text-left border border-gray-700">
-                    <p class="text-gray-300 leading-relaxed">The short answer to > | [ ValM@Archbox]: whoami | is that I'm a current Network Operations Tech for an Oil and Gas Company who got so burnt out on Jira they opened up a book and started to learn Python, then didn't know what to do with it, and learned Rust. I began Uni education at the "right" age, but sucked at exams, so now I write in Rust, Python, and Go and only vibe code Somtimes^tm. However, since I'm in a NOC, I don't get a lot of time to do useful things for society like learn to program, maybe learn some Ethical Hacking to the extent I woudl like to. What I do get time for though, is working on my Git. Case and point, this portfolio. Does it have a bunch of high level super advanced regular college kid with hope in their eyes and 100k in College debt? No. Will it eventually? Hopefully. I may not have the skills entirely yet (At the time of this init commit) but I have the drive to get better and work on what I need to work on. Plus, I love OffSec in that it's fun to think of things from an Attacker's POV and it's how I approach most engagements that I've had the chance to be a part of. This port will slowly fill up, and with it, I hope whoever is reading this is able to grow along with me. Even if we can't all be Suma Cum Laude and or live in a country with free education and job programmes.  </p>
+                    <p class="text-gray-300 leading-relaxed">
+The short answer to > | [ ValM@Archbox]: whoami | is that I'm a current Network Operations Tech for an Oil and Gas Company who got so burnt out on Jira they opened up a book and started to learn Python, then didn't know what to do with it, and learned Rust. I began Uni education at the "right" age, but sucked at exams, so now I write in Rust, Python, and Go and only vibe code Somtimes^tm. I'm mostly self-learning and using courses I can find for "free" and or as cheap as possible. I'm actively looking to escape the NOC and find a new job doing something besides JIRA. Atlassian, you're a great company if you're reading this, but I SWEAR TO THE DEV IN THE SKY, my current position has given me PTSD for using your ticketing system and I hope I can just be project based for the rest of my life. 
+                        
+However, since I'm in a NOC, I don't get a lot of time to do useful things for society like learn to program, maybe learn some Ethical Hacking to the extent I woudl like to. What I do get time for though, is working on my Git. Case and point, this portfolio. Does it have a bunch of high level super advanced regular college kid with hope in their eyes and 100k in College debt? No. Will it eventually? Hopefully. I may not have the skills entirely yet (At the time of this init commit) but I have the drive to get better and work on what I need to work on. Plus, I love OffSec in that it's fun to think of things from an Attacker's POV and it's how I approach most engagements that I've had the chance to be a part of. 
+
+This port will slowly fill up, and with it, I hope whoever is reading this is able to grow along with me. Even if we can't all be Suma Cum Laude and or live in a country with free education and job programmes. But that aside, I will continue to improve this portfolio over time and maybe even make it more professional. who knows? :3  </p>
                 </div>
             </div>
         </section>
