--- a/index.html
+++ b/index.html
@@ -88,7 +88,41 @@
                 <p class="text-lg text-gray-400">Network Ops Tech upskilling into OffSec Professional</p>
             </div>
         </section>
+        !-- About Section -->
+        <section id="about" class="min-h-screen py-20">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-4xl font-bold mb-8 text-white">About Me</h2>
+                <p class="text-gray-400 mb-12">Who is this person, and why should you care?</p>
+                 <!-- About me content -->
+                <div class="bg-gray-900 p-8 rounded-xl shadow-lg text-left border border-gray-700">
+                    <p class="text-gray-300 leading-relaxed">
+The short answer to > | [ ValM@Archbox]: whoami | is that I'm a current Network Operations Tech for an Oil and Gas Company who got so burnt out on Jira they opened up a book and started to learn Python, then didn't know what to do with it, and learned Rust. I began Uni education at the "right" age, but sucked at exams, so now I write in Rust, Python, and Go and only vibe code Somtimes^tm. I'm mostly self-learning and using courses I can find for "free" and or as cheap as possible. I'm actively looking to escape the NOC and find a new job doing something besides JIRA. Atlassian, you're a great company if you're reading this, but I SWEAR TO THE DEV IN THE SKY, my current position has given me PTSD for using your ticketing system and I hope I can just be project based for the rest of my life. 
+                        
+However, since I'm in a NOC, I don't get a lot of time to do useful things for society like learn to program, maybe learn some Ethical Hacking to the extent I woudl like to. What I do get time for though, is working on my Git. Case and point, this portfolio. Does it have a bunch of high level super advanced regular college kid with hope in their eyes and 100k in College debt? No. Will it eventually? Hopefully. I may not have the skills entirely yet (At the time of this init commit) but I have the drive to get better and work on what I need to work on. Plus, I love OffSec in that it's fun to think of things from an Attacker's POV and it's how I approach most engagements that I've had the chance to be a part of. 
 
+This port will slowly fill up, and with it, I hope whoever is reading this is able to grow along with me. Even if we can't all be Suma Cum Laude and or live in a country with free education and job programmes. But that aside, I will continue to improve this portfolio over time and maybe even make it more professional. who knows? :3  </p>
+                </div>
+            </div>
+        </section>
+        <!-- Education/Certifications Section -->
+        <section id="education" class="min-h-screen py-20 my-10">
+            <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-4xl font-bold mb-8 text-white">Education & Certifications</h2>
+                <p class="text-gray-400 mb-12">My academic background and professional credentials.</p>
+                 <!-- Education/Cert items will go here -->
+                <div class="bg-gray-900 p-8 rounded-xl shadow-lg border border-gray-700">
+                     <p class="text-gray-500"> <ul>
+                         <li>Associates of Arts - Houston Community College</li>
+                         <li>Comptia Security+ (The Learner's Permit of OffSec)</li> 
+                         <li>Western Governor's University - Did Not Graduate (Sucked at tests)</li>
+                         <li>INE eJPT (Currently working on getting this one.)</li>
+                         <li>Comptia PenTest+ (Considering)</li>
+                         <li>TCM Sec Certs PJPT (Planning to get after eJPT)</li>
+                     </ul>
+                </p>
+                </div>
+            </div>
+        </section>
         <!-- Projects Section -->
         <section id="projects" class="min-h-screen py-20">
             <div class="max-w-4xl mx-auto text-center">
@@ -120,41 +154,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- About Section -->
-        <section id="about" class="min-h-screen py-20">
-            <div class="max-w-4xl mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-8 text-white">About Me</h2>
-                <p class="text-gray-400 mb-12">Who is this person, and why should you care?</p>
-                 <!-- About me content -->
-                <div class="bg-gray-900 p-8 rounded-xl shadow-lg text-left border border-gray-700">
-                    <p class="text-gray-300 leading-relaxed">
-The short answer to > | [ ValM@Archbox]: whoami | is that I'm a current Network Operations Tech for an Oil and Gas Company who got so burnt out on Jira they opened up a book and started to learn Python, then didn't know what to do with it, and learned Rust. I began Uni education at the "right" age, but sucked at exams, so now I write in Rust, Python, and Go and only vibe code Somtimes^tm. I'm mostly self-learning and using courses I can find for "free" and or as cheap as possible. I'm actively looking to escape the NOC and find a new job doing something besides JIRA. Atlassian, you're a great company if you're reading this, but I SWEAR TO THE DEV IN THE SKY, my current position has given me PTSD for using your ticketing system and I hope I can just be project based for the rest of my life. 
-                        
-However, since I'm in a NOC, I don't get a lot of time to do useful things for society like learn to program, maybe learn some Ethical Hacking to the extent I woudl like to. What I do get time for though, is working on my Git. Case and point, this portfolio. Does it have a bunch of high level super advanced regular college kid with hope in their eyes and 100k in College debt? No. Will it eventually? Hopefully. I may not have the skills entirely yet (At the time of this init commit) but I have the drive to get better and work on what I need to work on. Plus, I love OffSec in that it's fun to think of things from an Attacker's POV and it's how I approach most engagements that I've had the chance to be a part of. 
-
-This port will slowly fill up, and with it, I hope whoever is reading this is able to grow along with me. Even if we can't all be Suma Cum Laude and or live in a country with free education and job programmes. But that aside, I will continue to improve this portfolio over time and maybe even make it more professional. who knows? :3  </p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Education/Certifications Section -->
-        <section id="education" class="min-h-screen py-20 my-10">
-            <div class="max-w-4xl mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-8 text-white">Education & Certifications</h2>
-                <p class="text-gray-400 mb-12">My academic background and professional credentials.</p>
-                 <!-- Education/Cert items will go here -->
-                <div class="bg-gray-900 p-8 rounded-xl shadow-lg border border-gray-700">
-                     <p class="text-gray-500"> >Associates of Arts - Houston Community College
-                                               >Comptia Security + (The Learner's Permit of OffSec
-                                               >Western Governor's University - Did Not Graduate (Sucked at tests)
-                                               >INE eJPT (Currently working on getting this one.)
-                                               >Comptia PenTest+ (Considering)
-                                               >TCM Sec Certs PJPT (Planning to get after eJPT) </p>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <footer class="text-center py-6 bg-gray-900 border-t border-gray-700/50 text-gray-400">
