--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <p class="text-lg text-gray-400">Network Ops Tech upskilling into OffSec Professional</p>
             </div>
         </section>
-        !-- About Section -->
+
+        <!-- About Section -->
         <section id="about" class="min-h-screen py-20">
             <div class="max-w-4xl mx-auto text-center">
                 <h2 class="text-4xl font-bold mb-8 text-white">About Me</h2>
@@ -104,6 +105,7 @@ This port will slowly fill up, and with it, I hope whoever is reading this is ab
                 </div>
             </div>
         </section>
+
         <!-- Education/Certifications Section -->
         <section id="education" class="min-h-screen py-20 my-10">
             <div class="max-w-4xl mx-auto text-center">
@@ -123,6 +125,7 @@ This port will slowly fill up, and with it, I hope whoever is reading this is ab
                 </div>
             </div>
         </section>
+
         <!-- Projects Section -->
         <section id="projects" class="min-h-screen py-20">
             <div class="max-w-4xl mx-auto text-center">
@@ -142,6 +145,8 @@ This port will slowly fill up, and with it, I hope whoever is reading this is ab
                             <a href="https://github.com/ValM23/rustlang" class="text-emerald-400 hover:text-white font-semibold">Where the wild files are. &rarr;</a>
                         </div>
                     </div>
+            </div>
+        </section>
 
         <!-- Resources Section -->
         <section id="resources" class="min-h-screen py-20 my-10">
@@ -154,6 +159,7 @@ This port will slowly fill up, and with it, I hope whoever is reading this is ab
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer class="text-center py-6 bg-gray-900 border-t border-gray-700/50 text-gray-400">
