--- a/index.html
+++ b/index.html
@@ -326,6 +326,19 @@ responsibilities = [
                         </div>
                     </div>
                 </div>
+                <div class="terminal-body">
+                        <h3 class="text-xl font-bold text-white mb-2">Osint-Scraper</h3>
+                        <p class="text-gray-400 mb-4 flex-grow">Project inspired and taught by Gemini via the CLI, basically a CLI tool to scrape websites written in Ruby. Stretch Goal is to generate reports on target sites.</p>
+                        <div class="mb-4">
+                            <span class="inline-block bg-gray-800 text-emerald-400 text-xs font-mono px-2 py-1 rounded-full mr-2 mb-2">Educational Purposes Only</span>
+                            <span class="inline-block bg-gray-800 text-emerald-400 text-xs font-mono px-2 py-1 rounded-full mr-2 mb-2">OffSec OSINT</span>
+                            <span class="inline-block bg-gray-800 text-emerald-400 text-xs font-mono px-2 py-1 rounded-full mr-2 mb-2">AI-Copilot</span>
+                        </div>
+                        <div class="mt-auto text-right">
+                            <a href="https://github.com/ValM23/osint_scraper" target="_blank" rel="noopener noreferrer" class="text-emerald-400 hover:text-white font-semibold">The Rabbit Hole is full of gems&rarr;</a>
+                        </div>
+                    </div>
+                </div>
 
                 <!-- Add more project cards here as needed -->
                 <div class="bg-gray-900/50 rounded-xl border border-dashed border-gray-700 p-6 flex items-center justify-center terminal-window">
