--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me | Matt's Cyber Security Portfolio</title>
+    <link rel="icon"                                                                                                                                      │
+ │           href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%3E%3Cpath%20fill='%2334d399'%20d='M12%2C2L9%2C5V11L  │
+ │           5%2C15V19H9V15L13%2C11V5L16%2C2H12Z'/%3E%3C/svg%3E">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Fira Code -->
