--- a/index.html
+++ b/index.html
@@ -329,7 +329,14 @@ responsibilities = [
                         </div>
                     </div>
                 </div>
-                <div class="terminal-body">
+                <div class="bg-gray-900 rounded-xl shadow-lg border border-gray-700 p-6 flex flex-col hover:border-emerald-500 hover:shadow-emerald-500/10 transition-all duration-300 terminal-window">
+                    <div class="terminal-header flex items-center space-x-2 mb-4">
+                        <span class="w-3 h-3 bg-red-500 rounded-full"></span>
+                        <span class="w-3 h-3 bg-yellow-500 rounded-full"></span>
+                        <span class="w-3 h-3 bg-green-500 rounded-full"></span>
+                        <span class="text-gray-400 text-sm ml-auto">cat Project_OSINT_Scraper.md</span>
+                    </div>
+                    <div class="terminal-body">
                         <h3 class="text-xl font-bold text-white mb-2">Osint-Scraper</h3>
                         <p class="text-gray-400 mb-4 flex-grow">Project inspired and taught by Gemini via the CLI, basically a CLI tool to scrape websites written in Ruby. Stretch Goal is to generate reports on target sites.</p>
                         <div class="mb-4">
