Update portfolio to align with new resume

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ SYNOPSIS
        valm [OPTIONS]
 
 DESCRIPTION
-       Matthew T. Valdez is a results-driven Network Operations professional with five years of experience safeguarding and maintaining enterprise-level networks in federal and private sectors. Actively transitioning into cybersecurity, combining a deep understanding of network infrastructure with a practical, hands-on skill set in threat analysis, vulnerability management, and defensive security operations. Eager to apply a proactive, security-first mindset to protect critical systems and data as a key contributor to a dedicated security team.
+       A hands-on security and network professional seeking a Cyber Defense or SOC Analyst role. Leveraging 5+ years of experience in high-stakes network operations with a proven ability to use XDR platforms and established incident response protocols to identify, triage, and mitigate emerging threats.
 
 OPTIONS
        --skills
@@ -209,7 +209,7 @@ OPTIONS
            SIEM Platforms (e.g., Splunk), Wireshark, Metasploit, Ghidra, Python (Scripting & Automation), SQL, C/C++, Rust, Git, Docker, Atlassian Jira, SolarWinds, Taegis.
 
        --education
-           Associates of Arts - Houston Community College; Completed Coursework toward Bachelor of Science in Computer Science - Western Governors University (Relevant Coursework: Cybersecurity Fundamentals, Network and Security Foundations, Scripting and Programming (Python), System and Network Security, Ethical Hacking and Countermeasures, Cloud Security).
+           Coursework toward Bachelor of Science in Computer Information Systems - University of Houston-Clear Lake; Associate of Arts - Houston Community College.
 
        --certifications
            CompTIA Security+ (Valid until Nov 2027); INE eJPT (Currently pursuing); CompTIA PenTest+ (Considering); TCM Security Certs PJPT (Planning to get after eJPT).
@@ -248,17 +248,9 @@ SEE ALSO
                 <div class="terminal-body">
                     <pre class="text-emerald-400">
 [education]
-university = "Western Governors University"
-degree = "Coursework toward Bachelor of Science in Computer Science"
-dates = "2022 - 2024"
-relevant_coursework = [
-    "Cybersecurity Fundamentals",
-    "Network and Security Foundations",
-    "Scripting and Programming (Python)",
-    "System and Network Security",
-    "Ethical Hacking and Countermeasures",
-    "Cloud Security"
-]
+university = "University of Houston-Clear Lake"
+degree = "Coursework toward Bachelor of Science in Computer Information Systems"
+dates = "2016 - 2018"
 
 college = "Houston Community College"
 degree = "Associate of Arts, Liberal Arts and Humanities"
@@ -275,11 +267,11 @@ location = "Houston, TX"
 role = "Network Operations Center (NOC) Tech I"
 dates = "Aug 2018 - Present"
 responsibilities = [
-    "Served as a first point of contact for all network events, performing critical triage on incoming tickets and alarms to ensure rapid assessment and appropriate escalation.",
-    "Monitored network health and security, responding to alerts from the Taegis XDR platform by initiating the incident response process for potential threats.",
-    "Translated complex technical incidents into clear, manageable action items for dispatching field teams and briefing executive leadership on status and impact.",
-    "Coordinated multi-team response efforts by collaborating with Network Engineering, SCADA Automation, and other departments to achieve swift issue resolution.",
-    "Provided essential operational support for over 200 network devices, contributing to the maintenance of 99.9% uptime and overall network stability."
+    "Monitored network and security events using the Taegis XDR platform, performing initial triage on alerts and escalating potential security incidents to the cybersecurity team for response.",
+    "Performed critical triage on all incoming network events and alarms, assessing priority and escalating to the appropriate engineering or security teams.",
+    "Documented and translated complex technical incidents into clear, manageable action items for dispatching field teams and briefing leadership on status and impact.",
+    "Coordinated response efforts by acting as a central communication point between Network Engineering, SCADA Automation, and other departments during network events.",
+    "Provided operational support for over 200 network devices, contributing to overall network stability and uptime."
 ]
 
 [experience.trustcomm]
@@ -288,9 +280,10 @@ location = "Houston, TX"
 role = "Managed Service Operations Center Tech"
 dates = "May 2017 - May 2018"
 responsibilities = [
-    "Provided 24/7 network surveillance and first-level technical support in a mission-critical Managed Service Operations Center (MSOC).",
-    "Served as a key point of contact for a diverse client base, including private sector and Intelligence Community end users, providing critical support and managing incident tickets.",
-    "Created detailed documentation and reports on network events, providing clear and concise data for after-action reviews and client communications."
+    "Ensured the operational security and integrity of satellite communications for national security, federal, and private sector clients.",
+    "Managed physical and logical access control systems for a secure facility, including assigning RSA tokens and maintaining door and equipment access.",
+    "Took initiative to design and deploy custom web-based monitoring tools, improving remote visibility of network and satellite hardware status.",
+    "Performed hands-on diagnostics and maintenance on military-grade satellite communication systems."
 ]
 </pre>
                 <p class="text-gray-300 leading-relaxed mt-4">
