Update founder role duration in index.html

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="hypr-content">
                         <div class="mb-6">
                             <h3 class="font-bold text-white">Founder & Content Strategist</h3>
-                            <p class="text-sm text-[var(--accent)] font-medium">Independent Media Channel (The Chaos Foundry) | Jan 2023 – Present</p>
+                            <p class="text-sm text-[var(--accent)] font-medium">Independent Media Channel | May 2020 – Present</p>
                             <ul class="list-disc list-inside text-sm text-[var(--text-secondary)] mt-2 space-y-1">
                                 <li>Co-founded a niche media venture, scaling to a community of 500+ members in under a year.</li>
                                 <li>Define and direct the creative "style" and "lore" for all content and branding.</li>
